Malou change need a minor fix

--- a/app.html
+++ b/app.html
@@ -77,6 +77,19 @@
         </div>
 
     </div>
+    <div id="forklaring_af_app">
+
+        <div id=afdelinger_tekst>
+            <div id="design">Design</div>
+            <div id="digital">Digital</div>
+            <div id="teknik">Teknik</div>
+            <div id="byg">Byg</div>
+        </div>
+        <div id="kea_unite_ikon">
+        </div>
+    </div>
+
+
 
     <div id="benefits_container">
         <div id="menuen1"></div>
