--- a/experiencemap.html
+++ b/experiencemap.html
@@ -10,18 +10,16 @@
 </head>
 <header>
 
-	<nav>
-		<a href="index.html">Forside</a>
-
-		<a href="app.html">App</a>
-		<a href="pitch.html">Pitch</a>
-		<a href="moodboard.html">Procesdokumentation</a>
-		<a href="test.html">Test</a>
-		<a href="experiencemap.html">Experience Map</a>
-		<a href="storyboard.html">Storyboard</a>
-		<a href="scrum.html">Scrum</a>
-		<a href="forretningsmodel.html">Forretningsmodel
-
+	<nav id="stor_nav">
+		<a id="stor_nav_a" href="index.html">Forside</a>
+		<a id="stor_nav_a" href="app.html">App</a>
+		<a id="stor_nav_a" href="pitch.html">Pitch</a>
+		<a id="stor_nav_a" href="moodboard.html">Procesdokumentation</a>
+		<a id="stor_nav_a" href="test.html">Test</a>
+		<a id="stor_nav_a" href="experiencemap.html">Experience Map</a>
+		<a id="stor_nav_a" href="storyboard.html">Storyboard</a>
+		<a id="stor_nav_a" href="scrum.html">Scrum</a>
+		<a id="stor_nav_a" href="forretningsmodel.html">Forretningsmodel
         </a>
 		<a class="none" href="burndownchart.html">Burndown Chart</a>
 
