--- a/index.html
+++ b/index.html
@@ -2,33 +2,31 @@
 <html lang="da">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="layout.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <title>titel</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="layout.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+	<title>titel</title>
 </head>
 <header>
-    <nav>
-        <a href="index.html">Forside</a>
-
-        <a href="app.html">App</a>
-        <a href="pitch.html">Pitch</a>
-        <a href="moodboard.html">Procesdokumentation</a>
-
-        <a href="test.html">Test</a>
-        <a href="experiencemap.html">Experience Map</a>
-        <a href="storyboard.html">Storyboard</a>
-        <a href="scrum.html">Scrum</a>
-        <a href="forretningsmodel.html">Forretningsmodel
+	<nav id="stor_nav">
+		<a id="stor_nav_a" href="index.html">Forside</a>
+		<a id="stor_nav_a" href="app.html">App</a>
+		<a id="stor_nav_a" href="pitch.html">Pitch</a>
+		<a id="stor_nav_a" href="moodboard.html">Procesdokumentation</a>
+		<a id="stor_nav_a" href="test.html">Test</a>
+		<a id="stor_nav_a" href="experiencemap.html">Experience Map</a>
+		<a id="stor_nav_a" href="storyboard.html">Storyboard</a>
+		<a id="stor_nav_a" href="scrum.html">Scrum</a>
+		<a id="stor_nav_a" href="forretningsmodel.html">Forretningsmodel
         </a>
-        <a class="none" href="burndownchart.html">Burndown Chart</a>
+		<a class="none" href="burndownchart.html">Burndown Chart</a>
 
-    </nav>
+	</nav>
 </header>
 
 <body id="forside">
-    <div id="baggrund"></div>
+	<div id="baggrund"></div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
