--- a/app.html
+++ b/app.html
@@ -2,93 +2,125 @@
 <html lang="">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="layout.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <title>titel</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="layout.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+	<title>titel</title>
 </head>
 <header>
 
-    <nav id="stor_nav">
-        <a id="stor_nav_a" href="index.html">Forside</a>
-        <a id="stor_nav_a" href="app.html">App</a>
-        <a id="stor_nav_a" href="pitch.html">Pitch</a>
-        <a id="stor_nav_a" href="moodboard.html">Procesdokumentation</a>
-        <a id="stor_nav_a" href="test.html">Test</a>
-        <a id="stor_nav_a" href="experiencemap.html">Experience Map</a>
-        <a id="stor_nav_a" href="storyboard.html">Storyboard</a>
-        <a id="stor_nav_a" href="scrum.html">Scrum</a>
-        <a id="stor_nav_a" href="forretningsmodel.html">Forretningsmodel
+	<nav id="stor_nav">
+		<a id="stor_nav_a" href="index.html">Forside</a>
+		<a id="stor_nav_a" href="app.html">App</a>
+		<a id="stor_nav_a" href="pitch.html">Pitch</a>
+		<a id="stor_nav_a" href="moodboard.html">Procesdokumentation</a>
+		<a id="stor_nav_a" href="test.html">Test</a>
+		<a id="stor_nav_a" href="experiencemap.html">Experience Map</a>
+		<a id="stor_nav_a" href="storyboard.html">Storyboard</a>
+		<a id="stor_nav_a" href="scrum.html">Scrum</a>
+		<a id="stor_nav_a" href="forretningsmodel.html">Forretningsmodel
         </a>
-        <a class="none" href="burndownchart.html">Burndown Chart</a>
+		<a class="none" href="burndownchart.html">Burndown Chart</a>
 
-    </nav>
+	</nav>
 </header>
 
 
 <body id="forside">
-    <div id="front"></div>
-    <div id="frontbaggrund"></div>
-    <nav id="mini_nav">
-        <a id="mini_nav_a" href="#profil_container">Info om os</a>
-        <a id="mini_nav_a" href="">Idé for app</a>
-        <a id="mini_nav_a" href="">App ikon</a>
-        <a id="mini_nav_a" href="">Login</a>
-        <a id="mini_nav_a" href="">Menu</a>
-        <a id="mini_nav_a" href="">Feed</a>
-        <a id="mini_nav_a" href="">Profil</a>
-        <a id="mini_nav_a" href="">Chat</a>
-        <a id="mini_nav_a" href="#guide">Guide i app</a>
-    </nav>
+	<div id="front"></div>
+	<div id="frontbaggrund"></div>
+	<nav id="mini_nav">
+		<a id="mini_nav_a" href="#profil_container">Info om os</a>
+		<a id="mini_nav_a" href="">Idé for app</a>
+		<a id="mini_nav_a" href="">App ikon</a>
+		<a id="mini_nav_a" href="">Login</a>
+		<a id="mini_nav_a" href="">Menu</a>
+		<a id="mini_nav_a" href="">Feed</a>
+		<a id="mini_nav_a" href="">Profil</a>
+		<a id="mini_nav_a" href="#konkurrenter">Konkurrenter</a>
+		<a id="mini_nav_a" href="#guide">Guide i app</a>
+	</nav>
 
-    <div id="profil_container">
-        <div id="profil1"></div>
-        <div id="profil2"></div>
-        <div id="profil3"></div>
-        <div id="profil4"></div>
-    </div>
+	<div id="profil_container">
+		<div id="profil1"></div>
+		<div id="profil2"></div>
+		<div id="profil3"></div>
+		<div id="profil4"></div>
+	</div>
 
-    <div id="profil_tekst_container">
-        <div id="tekst1">
-            <p>Malou Vincents<br> Malo0461@stud.kea.dk</p>
-        </div>
-        <div id="tekst2">
-            <p>Mateo Güldner<br> Mateo.guldner@gmail.com</p>
-        </div>
-        <div id="tekst3">
-            <p>Josefine Rasch<br> Josefinerasch@gmail.com</p>
-        </div>
-        <div id="tekst4">
-            <p> Rasmus Juby Rosbæk<br> Rasmus_22@hotmail.com</p>
-        </div>
-    </div>
+	<div id="profil_tekst_container">
+		<div id="tekst1">
+			<p>Malou Vincents<br> Malo0461@stud.kea.dk</p>
+		</div>
+		<div id="tekst2">
+			<p>Mateo Güldner<br> Mateo.guldner@gmail.com</p>
+		</div>
+		<div id="tekst3">
+			<p>Josefine Rasch<br> Josefinerasch@gmail.com</p>
+		</div>
+		<div id="tekst4">
+			<p> Rasmus Juby Rosbæk<br> Rasmus_22@hotmail.com</p>
+		</div>
+	</div>
 
-    <div id="intro_af_app">
-        <div id="flottefyr_img"></div>
-        <div id="tekst_fyr">
-            <ul>
-                <li>Eigil 23 år</li>
-                <li>Studerer multimediedesign på KEA</li>
-                <li>Bor i København N </li>
-                <li>Drømmer om at blive selvstændig</li>
-            </ul>
+	<div id="intro_af_app">
+		<div id="flottefyr_img"></div>
+		<div id="tekst_fyr">
+			<ul>
+				<li>Eigil 23 år</li>
+				<li>Studerer multimediedesign på KEA</li>
+				<li>Bor i København N </li>
+				<li>Drømmer om at blive selvstændig</li>
+			</ul>
 
-        </div>
+		</div>
 
-    </div>
+	</div>
 
 
+	<div id="konkurrenter">
+		<ul>
+			<li>Research om der findes andre apps som vores</li>
+			<li>Der findes websites for håndværkere</li>
+			<li>Men hvad med et forum for de ny uddannede der går med en lille iværksætter i maven?</li>
+			<li>Ja, Facebook er et godt sted at række hånden ud</li>
+			<li>Facebook:
+				<ul>
+					<li>Unødvendigt indhold</li>
+					<li>Useriøs</li>
+					<li>Ingen filtrering</li>
+					<li>Dårlige søgefunktioner</li>
+				</ul><br>
+			</li>
+			<li>Vores app er kun for
+				<ul>
+					<li>KEA studerende</li>
+					<li>Lærer på KEA</li>
+					<li>Betalende firmaer</li>
+				</ul>
+			</li>
+		</ul>
 
-    <div id="guide">
-        <video width="400" height="340" controls>
+	</div>
+
+	<div id="guide">
+		<video width="400" height="340" controls>
   <source src="pitch/kea_unite_done.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
 </video>
-        <p class="guide_app"></p>
+		<div class="guide_app">
+			<p>Tag på en guided tur i vores app hvor divs. features vil blive vist</p>
+			<ul>
+				<li>Feed</li>
+				<li>Chat</li>
+				<li>Profil</li>
+			</ul>
+		</div>
 
-    </div>
+
+	</div>
 </body>
 
 
